Implement account activation and unauthorized signup reporting features
- Introduced `AccountActivationEndpoint` and `AccountReportSignupEndpoint` to handle account activation via email links and report unauthorized signups.
- Added `AccountActivationService` to manage activation logic and email notifications for account activation and unauthorized signup reports.
- Updated email templates and messages for account activation and reporting, ensuring clear communication with users.
- Enhanced domain specifications and application guidelines to reflect new account activation processes and email handling.
- Configured application properties to support admin notifications for unauthorized signups.